classifier-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classifier-deployment
  labels:
    app: classifier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: classifier
  template:
    metadata:
      labels:
        app: classifier
    spec:
      containers:
        - name: classifier
          image: image-classification-and-docker-deployment-server
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
