classifier-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: classifier-service
spec:
  selector:
    app: classifier
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
