frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
