frontend-ingresss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: frontend-ingress
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: frontend.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:          
            name: frontend-service
            port: 
              number: 9000
